--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "axios": "^0.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -28,6 +33,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.7.0",
     "react-app-rewire-less": "^2.1.1",
-    "react-app-rewired": "^1.5.0"
+    "react-app-rewired": "^1.5.0",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
